# techflix-finance-api

./: README.md  manage.py  pyproject.toml
techflix_finance/: asgi.py  settings.py  urls.py  wsgi.py
techflix_finance/finance/: admin.py  models.py  serializers.py  urls.py  views.py
techflix_finance/finance/migrations/: 0001_initial.py
